--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 markdown:         redcarpet
 pygments:         true
 
-permalink:        pretty
+permalink:        /:year/:month/:title/
 
 title:            Working Bastard
 tagline:
